Channel Channges Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/channel/channel_nurse_view.xhtml
+++ b/src/main/webapp/channel/channel_nurse_view.xhtml
@@ -33,13 +33,16 @@
                         <p:outputLabel value="Session Name : "/>
                         <h:outputLabel value="#{channelReportController.serviceSession.name}" />
                     </f:facet>
-                    <p:column headerText="No">
-                        #{bs.serialNo}&nbsp;&nbsp;<p:inputText style="width: 20px;" rendered="#{sessionController.institutionPreference.applicationInstitution ne 'Cooperative'}"/>
+                    <p:column headerText="No" style="width: 5px!important;">
+                        #{bs.serialNo}
+                    </p:column>
+                    <p:column headerText="" style="width: 5px!important;" rendered="#{sessionController.institutionPreference.applicationInstitution ne 'Cooperative'}">
+                        <p:inputText style="width: 20px;" />
                     </p:column>
 
-                    <p:column headerText="Patient Name">#{bs.bill.patient.person.nameWithTitle}</p:column>
+                    <p:column headerText="Patient Name" style="width: 25px!important;">#{bs.bill.patient.person.nameWithTitle}</p:column>
 
-                    <p:column headerText="Bill No">
+                    <p:column headerText="Bill No" style="width: 10px!important;" rendered="#{sessionController.institutionPreference.applicationInstitution ne 'Ruhuna'}">
                         <p:outputLabel value="#{bs.bill.deptId}" rendered="#{bs.bill.paidBill eq null}" />
                         <p:outputLabel value="#{bs.bill.paidBill.deptId}" rendered="#{bs.bill.paidBill ne null}" />
                     </p:column>
@@ -51,12 +54,12 @@
 
 
                     <p:column headerText="C / R" style="text-align: center;">
-                        <p:outputLabel value="Cancelled" rendered="#{bs.bill.cancelled eq true}" style="color: red;"/>
-                        <p:outputLabel value="Refunded" rendered="#{bs.bill.refunded eq true}" style="color: red;"/>
+                        <p:outputLabel value="C" rendered="#{bs.bill.cancelled eq true}" style="color: red;"/>
+                        <p:outputLabel value="R" rendered="#{bs.bill.refunded eq true}" style="color: red;"/>
                         <p:outputLabel value="-" rendered="#{bs.bill.refunded eq false and bs.bill.cancelled eq false}"/>
 
                     </p:column>
-                    <p:column headerText="Agent/Emp" style="text-align: center;">
+                    <p:column headerText="Agent/Emp" style="text-align: center;width: 20px!important;text-overflow: ellipsis;white-space: nowrap;overflow: hidden;">
                         <p:outputLabel value="#{bs.bill.creditCompany.name}" rendered="#{bs.bill.creditCompany ne null and sessionController.institutionPreference.applicationInstitution ne 'Cooperative'}"/>  
                         <p:outputLabel value="(#{bs.bill.creditCompany.institutionCode})" rendered="#{bs.bill.creditCompany ne null}"/>
 
@@ -68,14 +71,14 @@
 
 
                     </p:column>                
-                    <p:column headerText="Agent Ref No" style="text-align: center;">                        
+                    <p:column headerText="Agent Ref No" style="text-align: center;width: 5px!important;">                        
                         <p:outputLabel value="#{bs.billItem.agentRefNo}" rendered="#{bs.billItem.agentRefNo ne null}"/>
                         <p:outputLabel value="-" rendered="#{bs.billItem.agentRefNo eq ''}"/>
                     </p:column>
                     <p:column selectionMode="multiple" headerText="Mark Absent" style="text-align: center;" styleClass="noPrintButton"></p:column>
-                    <p:column headerText="P/A">
-                        <p:outputLabel value="Absent"  rendered="#{bs.absent and(!bs.bill.cancelled and !bs.bill.refunded)}" style="color: red;"/>
-                        <p:outputLabel value="Present"  rendered="#{!bs.absent and(!bs.bill.cancelled and !bs.bill.refunded)}" style="color: green;"/>
+                    <p:column headerText="P/A" rendered="#{sessionController.institutionPreference.applicationInstitution ne 'Ruhuna'}">
+                        <p:outputLabel value="A"  rendered="#{bs.absent and(!bs.bill.cancelled and !bs.bill.refunded)}" style="color: red;"/>
+                        <p:outputLabel value="P"  rendered="#{!bs.absent and(!bs.bill.cancelled and !bs.bill.refunded)}" style="color: green;"/>
                         <p:outputLabel value="-"  rendered="#{bs.bill.cancelled or bs.bill.refunded}"/>
                     </p:column> 
 
