--- a/src/main/webapp/channel/channel_payment_staff_bill.xhtml
+++ b/src/main/webapp/channel/channel_payment_staff_bill.xhtml
@@ -34,15 +34,6 @@
                                             <p:ajax event="itemSelect" update="lstSelect" process="scStaff"  
                                                     listener="#{channelStaffPaymentBillController.fillSessions}"></p:ajax>
                                         </p:autoComplete>
-
-                                        <p:outputLabel value="Session" />
-                                        <p:selectOneMenu  id="lstSelect" converter="sscon"  
-                                                          value="#{channelStaffPaymentBillController.selectedServiceSession}" style="min-width: 100%;" >
-                                            <f:selectItem itemLabel="Select"  ></f:selectItem>
-                                            <f:selectItems  value="#{channelStaffPaymentBillController.serviceSessionList}" var="ses" 
-                                                            itemValue="#{ses}" 
-                                                            itemLabel="#{ses.name}" ></f:selectItems>
-                                        </p:selectOneMenu>
                                         <p:outputLabel value="Consider Date" />
                                         <p:selectBooleanCheckbox value="#{channelStaffPaymentBillController.considerDate}" >
                                             <p:ajax update="fDate tDate" process="@this" event="change" />
@@ -53,7 +44,14 @@
                                         <p:outputLabel value="To Date" />
                                         <p:calendar value="#{channelStaffPaymentBillController.toDate}" id="tDate" styleClass="dateTimePicker"
                                                     disabled="#{!channelStaffPaymentBillController.considerDate}" navigator="false" pattern="dd MMMM yyyy HH:mm:ss" />
-
+                                        <p:outputLabel value="Session" />
+                                        <p:selectOneMenu  id="lstSelect" converter="sscon"  
+                                                          value="#{channelStaffPaymentBillController.selectedServiceSession}" style="min-width: 100%;" >
+                                            <f:selectItem itemLabel="Select"  ></f:selectItem>
+                                            <f:selectItems  value="#{channelStaffPaymentBillController.serviceSessionList}" var="ses" 
+                                                            itemValue="#{ses}" 
+                                                            itemLabel="#{ses.name} - #{ses.dayString}" ></f:selectItems>
+                                        </p:selectOneMenu>
                                         <p:commandButton ajax="false" value="Process" action="#{channelStaffPaymentBillController.calculateDueFees}"/>
                                         <p:commandButton ajax="false" value="Clear" action="#{channelStaffPaymentBillController.makenull()}"/>
                                         <p:watermark value="Speciality" for="acSpeciality"/>
