--- a/src/main/webapp/channel/channel_report_agent_payment_bill.xhtml
+++ b/src/main/webapp/channel/channel_report_agent_payment_bill.xhtml
@@ -21,7 +21,7 @@
                                 </p:commandButton>
                             </f:facet>
                             <h:panelGroup>                               
-                                <h:panelGrid columns="5" >
+                                <h:panelGrid columns="2" >
                                     <h:outputLabel value="From Date"/>
                                     <p:calendar styleClass="dateTimePicker" id="fromDate" value="#{channelReportTempController.fromDate}"
                                                 navigator="true" pattern="dd MMMM yyyy hh mm ss a" >      
@@ -30,6 +30,13 @@
                                     <p:calendar styleClass="dateTimePicker" id="toDate" value="#{channelReportTempController.toDate}" 
                                                 navigator="true" pattern="dd MMMM yyyy hh mm ss a" >                                                                              
                                     </p:calendar>
+                                    <p:outputLabel value="Agent Name" />
+                                    <p:autoComplete converter="deal" value="#{channelReportTempController.reportKeyWord.institution}" styleClass="mediuminput"
+                                                    forceSelection="true"
+                                                    completeMethod="#{agencyController.completeAgency}" var="vt" itemLabel="#{vt.name}" itemValue="#{vt}" >
+                                        <p:column>#{vt.institutionCode}</p:column>
+                                        <p:column>#{vt.name}</p:column>
+                                    </p:autoComplete>
                                 </h:panelGrid>
                                 <h:panelGrid columns="3" >
                                     <p:commandButton id="btnSearch" ajax="false" value="Search" action="#{channelReportTempController.createAgentPaymentTable()}" onclick="onSubmitButton();"/>
@@ -64,6 +71,9 @@
                                         <h:outputLabel value="#{bill.insId}" />
                                         <h:outputLabel value=" - " rendered="#{bill.cancelled}"/>
                                         <h:outputLabel style="color: red;" rendered="#{bill.cancelled}" value="#{bill.cancelledBill.insId}" />
+                                        <f:facet name="footer">
+                                            <p:outputLabel value="Total" style="float: left;" />
+                                        </f:facet>
                                     </p:column>                                            
                                     <p:column>
                                         <f:facet name="header">
@@ -116,6 +126,11 @@
                                         <h:outputLabel value="#{bill.netTotal}" >
                                             <f:convertNumber pattern="#,##0.00"/>
                                         </h:outputLabel>
+                                        <f:facet name="footer">
+                                            <h:outputLabel value="#{channelReportTempController.channelTotal.netTotal}" style="float: right;" >
+                                                <f:convertNumber pattern="#,##0.00"/>
+                                            </h:outputLabel>
+                                        </f:facet>
                                     </p:column>                          
                                     <p:column >
                                         <f:facet name="header">
