--- a/src/main/webapp/reportCashier/report_cashier_summery_by_user.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier_summery_by_user.xhtml
@@ -22,7 +22,7 @@
                         <f:facet name="header" >
                             <h:outputLabel value="#{sessionController.loggedUser.institution.name}"/>
                             <br/>
-                            <h:outputLabel value="Casheir Summary :"/>
+                            <h:outputLabel value="#{commonReport.header} :"/>
                             <h:outputLabel value="#{commonReport.webUser.webUserPerson.name}"/>
                             <h:outputLabel value="&emsp;&emsp;&emsp;&emsp;From :"/>
                             <h:outputLabel value="#{commonReport.fromDate}">
