--- a/src/main/webapp/resources/cashier/channelCancelBillProPay.xhtml
+++ b/src/main/webapp/resources/cashier/channelCancelBillProPay.xhtml
@@ -31,67 +31,27 @@
                 </f:facet>
                 <h:outputLabel value="#{b.insId}"/>
             </p:column>
-            <p:column headerText="Bht No"  >
+            <p:column headerText="Ref. Id" >
                 <f:facet name="header">  
-                    <h:outputLabel value="Bht No"/>
+                    <h:outputLabel value="Ref. ID"/>
                 </f:facet>
-                <h:outputLabel  value="#{b.patientEncounter.bhtNo}"/>
+                <h:outputLabel value="#{b.billedBill.insId}"/>
             </p:column>
-            <p:column headerText="Patient"  >
+            <p:column headerText="Paid to"  >
                 <f:facet name="header">  
-                    <h:outputLabel value="Patient"/>
-                </f:facet>
-                <h:outputLabel value="#{b.patient.person.nameWithTitle}"/>
+                    <h:outputLabel value="Paid to"/>
+                </f:facet> 
+                <h:outputLabel value="#{b.staff.person.nameWithTitle}"/>
             </p:column>
-            <p:column headerText="Cash" style=" text-align: right"  >
+            <p:column headerText="Cash" style=" text-align: right" rendered="#{cc.attrs.data.cash!=0.0}"  >
                 <f:facet name="header">  
                     <h:outputLabel value="Cash"/>
                 </f:facet> 
                 <h:outputLabel rendered="#{b.paymentMethod=='Cash'}" value="#{b.netTotal}" >
                     <f:convertNumber pattern="#,##0.00"/>
                 </h:outputLabel>
-                <h:outputLabel rendered="#{b.paymentMethod!='Cash'}" value="0.00" />
+                <h:outputLabel rendered="#{b.paymentMethod!='Cash'}" value="0.00"/>
             </p:column>
-            <p:column headerText="Credit" style=" text-align: right" >
-                <f:facet name="header">  
-                    <h:outputLabel value="Credit"/>
-                </f:facet> 
-                <h:outputLabel rendered="#{b.paymentMethod=='Credit'}" value="#{b.netTotal}"  >
-                    <f:convertNumber pattern="#,##0.00"/>
-                </h:outputLabel>
-                <h:outputLabel rendered="#{b.paymentMethod!='Credit'}" value="0.00"/>
-
-            </p:column>
-            <p:column headerText="C Card" style=" text-align: right" >
-                <f:facet name="header">  
-                    <h:outputLabel value="C Card"/>
-                </f:facet> 
-                <h:outputLabel rendered="#{b.paymentMethod=='Card'}" value="#{b.netTotal}" >
-                    <f:convertNumber pattern="#,##0.00"/>
-                </h:outputLabel>
-                <h:outputLabel rendered="#{b.paymentMethod!='Card'}" value="0.00"/>
-            </p:column>
-
-            <p:column headerText="Checque" style=" text-align: right" >
-                <f:facet name="header">  
-                    <h:outputLabel value="Checque"/>
-                </f:facet> 
-                <h:outputLabel rendered="#{b.paymentMethod=='Cheque'}" value="#{b.netTotal}" >
-                    <f:convertNumber pattern="#,##0.00"/>
-                </h:outputLabel>
-                <h:outputLabel rendered="#{b.paymentMethod!='Cheque'}" value="0.00"/>
-            </p:column>
-
-            <p:column headerText="Slip" style=" text-align: right" >
-                <f:facet name="header">  
-                    <h:outputLabel value="Slip"/>
-                </f:facet> 
-                <h:outputLabel rendered="#{b.paymentMethod=='Slip'}" value="#{b.netTotal}" >
-                    <f:convertNumber pattern="#,##0.00"/>
-                </h:outputLabel>
-                <h:outputLabel rendered="#{b.paymentMethod!='Slip'}" value="0.00"/>
-            </p:column>
-
             <p:column exportable="false">
                 <p:selectBooleanCheckbox style="border: black 2px solid;"/>
             </p:column>
@@ -105,36 +65,7 @@
                             </h:outputLabel>
                         </f:facet>
                     </p:column>
-                    <p:column footerText="#{cc.attrs.data.credit}" style=" text-align: right">
-                        <f:facet name="footer">
-                            <h:outputLabel value="#{cc.attrs.data.credit}">
-                                <f:convertNumber pattern="#,##0.00"/>
-                            </h:outputLabel>
-                        </f:facet>
-                    </p:column>
-                    <p:column footerText="#{cc.attrs.data.card}" style=" text-align: right">  
-                        <f:facet name="footer">
-                            <h:outputLabel value="#{cc.attrs.data.card}">
-                                <f:convertNumber pattern="#,##0.00"/>
-                            </h:outputLabel>
-                        </f:facet>
-                    </p:column>
-                    <p:column footerText="#{cc.attrs.data.cheque}" style=" text-align: right"> 
-                        <f:facet name="footer">
-                            <h:outputLabel value="#{cc.attrs.data.cheque}">
-                                <f:convertNumber pattern="#,##0.00"/>
-                            </h:outputLabel>
-                        </f:facet>
-                    </p:column>
-                    <p:column footerText="#{cc.attrs.data.slip}" style=" text-align: right">
-                        <f:facet name="footer">
-                            <h:outputLabel value="#{cc.attrs.data.slip}">
-                                <f:convertNumber pattern="#,##0.00"/>
-                            </h:outputLabel>
-                        </f:facet>
-                    </p:column>
                 </p:row>  
-
             </p:columnGroup>  
         </p:dataTable>
     </cc:implementation>
