--- a/src/main/webapp/pharmacy/pharmacy_report_transfer_issue_bill_item.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_transfer_issue_bill_item.xhtml
@@ -118,7 +118,7 @@
                                     <f:facet name="header">
                                         <h:outputLabel value="Quantity"/>
                                     </f:facet>
-                                    <h:outputLabel value="#{i.pharmaceuticalBillItem.qty}"  >
+                                    <h:outputLabel value="#{-i.pharmaceuticalBillItem.qty}"  >
                                         <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
                                     </h:outputLabel>
                                 </p:column>
@@ -136,7 +136,7 @@
                                     <f:facet name="header">
                                         <h:outputLabel value="Cost Rate"/>
                                     </f:facet>
-                                    <h:outputLabel value="#{i.pharmaceuticalBillItem.itemBatch.purcahseRate * i.pharmaceuticalBillItem.qty}"  >
+                                    <h:outputLabel value="#{-i.pharmaceuticalBillItem.itemBatch.purcahseRate * i.pharmaceuticalBillItem.qty}"  >
                                         <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
                                     </h:outputLabel>                                  
                                 </p:column>
