--- a/src/main/webapp/resources/bill/five_five_paper_with_headings.xhtml
+++ b/src/main/webapp/resources/bill/five_five_paper_with_headings.xhtml
@@ -309,6 +309,17 @@
                         </td>
                     </tr>
 
+                     <tr>
+                        <td  class="totalsBlock" style="text-align: left;">
+                            <h:outputLabel  rendered="#{cc.attrs.bill.discount ne 0.0}"    value="VAT" />
+                        </td>
+                        <td  class="totalsBlock" style="text-align: right!important;font-weight: bold; ; padding-right: 30px; ">
+                            <h:outputLabel  rendered="#{cc.attrs.bill.discount ne 0.0}"    value="#{cc.attrs.bill.vat}">
+                                <f:convertNumber pattern="#,##0.00" />
+                            </h:outputLabel>
+                        </td>
+                    </tr>
+                    
 
                 </table>
 
