--- a/src/main/webapp/opd_bill.xhtml
+++ b/src/main/webapp/opd_bill.xhtml
@@ -262,6 +262,9 @@
                                             <p:column style="max-width: 200px;" headerText="Dept">
                                                 <h:outputLabel value="#{ix.department.name}"></h:outputLabel>
                                             </p:column>
+                                            <p:column style="max-width: 200px;" headerText="Code">
+                                                <h:outputLabel value="#{ix.code}"></h:outputLabel>
+                                            </p:column>
                                             <p:column style="text-align: right; max-width: 80px;" headerText="Value">
                                                 <h:outputLabel value="#{ix.total}"></h:outputLabel>
                                             </p:column>
@@ -552,7 +555,7 @@
                                                     <f:convertNumber pattern="#,##0.00" />
                                                 </h:outputLabel>
                                                  <h:outputLabel value="VAT" ></h:outputLabel>
-                                                 <h:outputLabel id="netTotal" value="#{billController.vat}" >
+                                                 <h:outputLabel id="netTotalVat" value="#{billController.vat}" >
                                                     <f:convertNumber pattern="#,##0.00" />
                                                 </h:outputLabel>
                                                 <h:outputLabel value="Tendered" ></h:outputLabel>
