Signed-off-by: Dr. M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/lab_investigation.xhtml
+++ b/src/main/webapp/lab_investigation.xhtml
@@ -87,9 +87,9 @@
                                     <p:outputLabel value="Item Code"/>
                                     <p:inputText autocomplete="off" value="#{investigationController.current.code}"/>
 
-                                    <h:outputText id="lblFullName" value="Full Name" ></h:outputText>
-                                    <p:inputText styleClass="longText pdInputText" autocomplete="off" id="txtFullName"  
-                                                 value="#{investigationController.current.fullName}"  ></p:inputText>
+                                    <h:outputText id="lblVatPercentage" value="VAT Percentage" ></h:outputText>
+                                    <p:inputText styleClass="longText pdInputText" autocomplete="off"   
+                                                 value="#{investigationController.current.vatPercentage}"  ></p:inputText>
 
                                     
                                     <h:outputText value="VATable" ></h:outputText>
