--- a/src/main/webapp/resources/bill/opdBillPrintRuhunu.xhtml
+++ b/src/main/webapp/resources/bill/opdBillPrintRuhunu.xhtml
@@ -170,6 +170,27 @@
                                 </td>
                             </tr>
                             <tr>
+                                <td style="text-align: left; min-width: 3cm;">
+                                    <h:outputLabel value="VAT" />
+                                </td>
+                                <td style="text-align: right!important; ">
+                                    <h:outputLabel value="#{cc.attrs.bill.vat}">
+                                        <f:convertNumber pattern="#,##0.00" />
+                                    </h:outputLabel>
+                                </td>
+                            </tr>
+<!--                            <tr>
+                                <td style="text-align: left;">
+                                    <h:outputLabel  rendered="#{cc.attrs.bill.vat ne 0.0}"    value="VAT" style=" text-align: right!important;  font-size: 15px!important;   "/>
+                                </td>
+                                <td style="text-align: right!important; ">
+                                    <h:outputLabel  rendered="#{cc.attrs.bill.vat ne 0.0}"    value="#{cc.attrs.bill.vat}"  style="font-weight: bold ; text-align: right!important; font-size: 15px!important;    ">
+                                        <f:convertNumber pattern="#,##0.00" />
+                                    </h:outputLabel>
+                                </td>
+                            </tr>-->
+                            
+                            <tr>
                                 <td style="text-align: left;">
                                     <h:outputLabel  rendered="#{cc.attrs.bill.discount ne 0.0}" style=" text-align: right!important;  font-size: 15px!important;   "  value="Discount"/>
                                 </td>
