--- a/src/main/webapp/resources/cashier/opdBilled.xhtml
+++ b/src/main/webapp/resources/cashier/opdBilled.xhtml
@@ -52,7 +52,7 @@
                 <f:facet name="header">  
                     <h:outputLabel value="Cash"/>
                 </f:facet> 
-                <h:outputLabel rendered="#{b.paymentMethod=='Cash'}" value="#{b.netTotal}" >
+                <h:outputLabel rendered="#{b.paymentMethod=='Cash'}" value="#{b.vatPlusNetTotal}" >
                     <f:convertNumber pattern="#,##0.00"/>
                 </h:outputLabel>
                 <h:outputLabel rendered="#{b.paymentMethod!='Cash'}" value="0.00" />
@@ -61,7 +61,7 @@
                 <f:facet name="header">  
                     <h:outputLabel value="Credit"/>
                 </f:facet> 
-                <h:outputLabel rendered="#{b.paymentMethod=='Credit'}" value="#{b.netTotal}"  >
+                <h:outputLabel rendered="#{b.paymentMethod=='Credit'}" value="#{b.vatPlusNetTotal}"  >
                     <f:convertNumber pattern="#,##0.00"/>
                 </h:outputLabel>
                 <h:outputLabel rendered="#{b.paymentMethod!='Credit'}" value="0.00"/>
@@ -72,7 +72,7 @@
                 <f:facet name="header">  
                     <h:outputLabel value="C Card"/>
                 </f:facet> 
-                <h:outputLabel rendered="#{b.paymentMethod=='Card'}" value="#{b.netTotal}" >
+                <h:outputLabel rendered="#{b.paymentMethod=='Card'}" value="#{b.vatPlusNetTotal}" >
                     <f:convertNumber pattern="#,##0.00"/>
                 </h:outputLabel>
                 <h:outputLabel rendered="#{b.paymentMethod!='Card'}" value="0.00"/>
@@ -82,7 +82,7 @@
                 <f:facet name="header">  
                     <h:outputLabel value="Checque"/>
                 </f:facet> 
-                <h:outputLabel rendered="#{b.paymentMethod=='Cheque'}" value="#{b.netTotal}" >
+                <h:outputLabel rendered="#{b.paymentMethod=='Cheque'}" value="#{b.vatPlusNetTotal}" >
                     <f:convertNumber pattern="#,##0.00"/>
                 </h:outputLabel>
                 <h:outputLabel rendered="#{b.paymentMethod!='Cheque'}" value="0.00"/>
@@ -92,7 +92,7 @@
                 <f:facet name="header">  
                     <h:outputLabel value="Slip"/>
                 </f:facet> 
-                <h:outputLabel rendered="#{b.paymentMethod=='Slip'}" value="#{b.netTotal}" >
+                <h:outputLabel rendered="#{b.paymentMethod=='Slip'}" value="#{b.vatPlusNetTotal}" >
                     <f:convertNumber pattern="#,##0.00"/>
                 </h:outputLabel>
                 <h:outputLabel rendered="#{b.paymentMethod!='Slip'}" value="0.00"/>
