--- a/src/main/webapp/resources/channel/channelRecipt_ruhunu.xhtml
+++ b/src/main/webapp/resources/channel/channelRecipt_ruhunu.xhtml
@@ -260,7 +260,27 @@
 
                                 </tr>
 
+                                <tr>
+                                    <td>
+                                        <b>
+                                            <h:outputLabel value="Vat(15%)" ></h:outputLabel>
+                                        </b>
+                                    </td>
+                                    <td>
+                                        <p:spacer width="10" ></p:spacer>
+                                    </td>
+                                    <td>
+                                        <h:outputLabel value=":" ></h:outputLabel>
+                                    </td>
+                                    <td>
+                                        <b>
+                                            <h:outputLabel value="#{cc.attrs.bill.vat}" >
+                                                <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
+                                            </h:outputLabel>
+                                        </b>
+                                    </td>
 
+                                </tr>
 
                                 <tr>
                                     <td>
@@ -276,7 +296,7 @@
                                     </td>
                                     <td>
                                         <b>
-                                            <h:outputLabel value="#{cc.attrs.bill.netTotal}" >
+                                            <h:outputLabel value="#{cc.attrs.bill.vatPlusNetTotal}" >
                                                 <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
                                             </h:outputLabel>
                                         </b>
