--- a/src/main/webapp/resources/bill/opdBillPrintRuhunu.xhtml
+++ b/src/main/webapp/resources/bill/opdBillPrintRuhunu.xhtml
@@ -179,6 +179,16 @@
                                     </h:outputLabel>
                                 </td>
                             </tr>
+                             <tr>
+                                <td style="text-align: left; min-width: 3cm;">
+                                    <h:outputLabel value="Net Total" />
+                                </td>
+                                <td style="text-align: right!important; ">
+                                    <h:outputLabel value="#{cc.attrs.bill.vatPlusNetTotal}">
+                                        <f:convertNumber pattern="#,##0.00" />
+                                    </h:outputLabel>
+                                </td>
+                            </tr>
 <!--                            <tr>
                                 <td style="text-align: left;">
                                     <h:outputLabel  rendered="#{cc.attrs.bill.vat ne 0.0}"    value="VAT" style=" text-align: right!important;  font-size: 15px!important;   "/>
